refactor to heroku's java specifications